js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.8.kt
class MyClass {
    companion object {
        konst intProperty: Int
            get() = 4
    }
}
